cambio color footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ footer{
     text-align: center;
     padding-top: 1em;
     padding-bottom: 1em;
-    background-color: #41559E;
+    background-color: #143ABC;
     color: white;
 }
 
